# lumineer

./: .gitignore  README.md  knowledge_base.json  pyproject.toml  tree.txt
data/: flashcards.json
src/lumineer/: __init__.py  __main__.py  run_lumineer.py
src/lumineer/alight/: __init__.py  constants.py  core.py  gui.py  main.py
src/lumineer/alight/science/biology/evodevo/: __init__.py
src/lumineer/alight/science/biology/immunology/: innate_immunity.py
src/lumineer/alight/science/biology/microbiology/bacteria/: escherichia.py  streptococcus.py
src/lumineer/alight/science/chemistry/organic/nomenclature/: alkane.py  alkene.py  alkyne.py
src/lumineer/flash/: __init__.py  __main__.py  main.py
src/lumineer/flashcards/: __init__.py  __main__.py  main.py
src/lumineer/scholar/: Scholar.sh  __init__.py  __main__.py  main.py  record.json  schedule.json  setup.py
src/lumineer/scholyr/: Scholyr.sh  __main__.py  main.py  scholyr_pythonista.py
src/lumineer/scholyr/gradebooks/: Developmental Biology.json  Developmental Biology_SP24.json  Microscale Organic Chemistry Lab.json  Microscale Organic Chemistry_SP24.json  Organic Chemistry II.json  Statistical Methods for Biologists_SP24.json
src/lumineer/scholyr/main.egg-info/: SOURCES.txt
src/lumineer/spectacle/: __init__.py  main.py
src/lumineer/utils/: __init__.py  evodevo.py
