[tool.poetry]
name = "lumineer"
version = "0.0.1a10"
description = "School tools"
authors = ["K. LeBryce <kosmolebryce@pm.me>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "lumineer", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
appdirs = "^1.4.4"
markdown = "^3.6"
pyqt6 = "^6.7.1"

[tool.poetry.group.dev.dependencies]
poetry = "^1.8.3"
black = "^24.8.0"

[tool.poetry.scripts]
lumineer = "lumineer.__main__:main"
flash = "lumineer.flash.main:main"
scholar = "lumineer.scholar.main:main"
alight = "lumineer.alight.gui:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
